[gd_scene load_steps=4 format=3 uid="uid://dbkkfb6pvnoyv"]

[ext_resource type="Script" path="res://redstone/RedstoneWire.gd" id="1_q1fm3"]
[ext_resource type="Texture2D" uid="uid://b88ib4n6lae2e" path="res://sprites/Redstone/individual/row-1-column-1.png" id="2_85n4w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5v5a1"]
size = Vector2(4, 4)

[node name="RedstoneWire" type="CharacterBody2D"]
script = ExtResource("1_q1fm3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_85n4w")

[node name="RedstoneWireR" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedstoneWireR"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_5v5a1")

[node name="RedstoneWireD" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedstoneWireD"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_5v5a1")

[node name="RedstoneWireL" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedstoneWireL"]
position = Vector2(-8, 0)
shape = SubResource("RectangleShape2D_5v5a1")

[node name="RedstoneWireU" type="Area2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(1, 1.01303)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedstoneWireU"]
shape = SubResource("RectangleShape2D_5v5a1")

[node name="RedstoneWireX" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedstoneWireX"]
shape = SubResource("RectangleShape2D_5v5a1")
